welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:23: error: expected class or object definition
droite();avance();gauche();avance() 
^DwarfCode:23: error: expected class or object definition
droite();avance();gauche();avance() 
         ^DwarfCode:23: error: expected class or object definition
droite();avance();gauche();avance() 
                  ^DwarfCode:23: error: expected class or object definition
droite();avance();gauche();avance() 
                           ^DwarfCode:25: error: Unmatched closing brace '}' ignored here
	}
        ^DwarfCode:26: error: eof expected but '}' found.
}
^